## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001, 2002, 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
##
## Miro/scripts/Makefile
##
##############################################################################

include $(top_srcdir)/config/Make-rules

scriptsdir = $(prefix)/scripts

scripts = \
	doclinks_create.sh \
	addheader.sh \
	doclinks_delete.sh \
	generateChangeLog.sh

scripts_SCRIPTS = $(scripts)

EXTRA_DIST = $(scripts)
