## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001, 2002, 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
##
## Miro/scripts/Makefile
##
##############################################################################

include $(top_srcdir)/config/Make-rules

scripts = \
	addheader.sh \
	generateChangeLog.sh

noinst_SCRIPTS = $(scripts)

# scriptsdir = $(prefix)/scripts
# scripts_SCRIPTS = $(scripts)

EXTRA_DIST = $(scripts)
