## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/scripts/Makefile.am
##
##############################################################################


include $(top_srcdir)/config/Make-rules

scripts = \
	addheader.sh \
	generateChangeLog.sh

noinst_SCRIPTS = $(scripts)

# scriptsdir = $(prefix)/scripts
# scripts_SCRIPTS = $(scripts)

EXTRA_DIST = $(scripts)
