## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001, 2002, 2003, 2004
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
## $Date$
## 
##
## Miro/utils/Makefile
##
##############################################################################

globaldirs = \
	nsIOR \
	widgets \
	notify \
	notifyObserver \
	logPlayer \
	rangeSensor \
	qtVideo \
	qtTouchPad \
	qtJoystick \
	configEditor \
	policyController \
	policyEditor

#	makeConfig
#	sparrowBoard

if COND_SPARROW99
sparrowdirs = \
	Joystick
endif



SUBDIRS = $(globaldirs) $(sparrowdirs)
