## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/botsvcs/Makefile.am
##
##############################################################################


## insert unconditional directories here
generaldirs = \
	BAP \
	MCL \
	tests \
	examples

SUBDIRS = $(generaldirs)


