## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001, 2002, 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
##
## Miro/dtd/Makefile
##
##############################################################################

include $(top_srcdir)/config/Make-rules

dtddata = \
	PolicyConfig.dtd

dtddir = $(prefix)/dtd
dtd_DATA = $(dtddata)

EXTRA_DIST = $(dtddata)
