## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/botsvcs/examples/Makefile.am
##
##############################################################################


## insert unconditional directories here
generaldirs = BAP

SUBDIRS = $(generaldirs)


