## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## Miro/botsvcs/tests/Makefile.am
##
##############################################################################

## insert unconditional directories here
generaldirs = \
	BAP

SUBDIRS = $(generaldirs)


