## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/botsvcs/tests/Makefile.am
##
##############################################################################


## insert unconditional directories here
generaldirs = \
	BAP

SUBDIRS = $(generaldirs)


