## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 2000, 2001, 2002, 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
##
## Miro/examples/behaviours/Makefile
##
##############################################################################

globaldirs = \
	simple \
	rangeSensor \
	engine

if COND_B21
b21dirs = \
	b21
endif



SUBDIRS = $(b21dirs) $(globaldirs)
